# stabilization

./: CMakeLists.txt  README.md  case.c  case.h  case_sokol.c  case_sokol.h  differential_operators.c  differential_operators.h  functions.c  functions.h  gas_two.c  gas_two.h  gnuploting.c  gnuploting.h  harmonic.c  harmonic.h  harmonic_help.c  harmonic_help.h  main.c  otch.tex  residuals.c  residuals.h
tex/: 1_scheme_formula.aux  1_scheme_formula.tex  problem.aux  problem.tex  prototypes.aux  prototypes.tex  report.aux  report.dvi  report.tex
tex/g/: 1.eps  2.eps
